Add other files and main body of html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Maquetación Pets</title>
+  <link rel="icon" type="image/jpg" href="./img/logo2.png" />
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 
 <body>
+  <main>
+
+    <header class="header">
+
+      <div>
+        <div class="kicker">PET ACTIVITIES</div>
+        <h1 class="title">Take a closer look</h1>
+      </div>
+
+      <div>
+        <button class="img-btn">VIEW ALL</button>
+      </div>
+
+    </header>
+
+    <section class="picture-section">
+      <div class="dog-img">
+        <img src="./img/01.jpg" alt="Dog with toy">
+      </div>
+      <div class="cat-img">
+        <img src="./img/02.jpg" alt="Cat under blanket">
+      </div>
+      <div class="fluffy-dog-img">
+        <img src="./img/03.jpg" alt="Fluffy dog running">
+      </div>
+    </section>
+
+  </main>
 
 </body>
 
