Good enough to finish T_T

--- a/index.html
+++ b/index.html
@@ -21,20 +21,15 @@
         <h1 class="title">Take a closer look</h1>
       </div>
 
-      <div>
-        <button class="img-btn">VIEW ALL</button>
-      </div>
+      <button class="img-btn">VIEW ALL</button>
+
 
     </header>
 
     <section class="picture-section">
-      <div class="dog-img">
+      <div class="images">
         <img src="./img/01.jpg" alt="Dog with toy">
-      </div>
-      <div class="cat-img">
         <img src="./img/02.jpg" alt="Cat under blanket">
-      </div>
-      <div class="fluffy-dog-img">
         <img src="./img/03.jpg" alt="Fluffy dog running">
       </div>
     </section>
